--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ clap = "2.32.0"
 chrono = "0.4.6"
 ctrlc = "3.1.1"
 env_logger = "0.5.12"
-filedb = { path = "../filedb", version = "0.1" }
+filedb = "0.1" #{ path = "../filedb", version = "0.1" }
 log = "0.4.5"
 rust-crypto = "0.2"
 serde = "1.0.75"
