--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ path = "src/bin/client.rs"
 clap = "2.32.0"
 chrono = "0.4.6"
 ctrlc = "3.1.1"
+dirs = "1.0"
 env_logger = "0.5.12"
-filedb = "0.1" #{ path = "../filedb", version = "0.1" }
+filedb = "0.1"
 log = "0.4.5"
 rust-crypto = "0.2"
 serde = "1.0.75"
